# uBot

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  main.py  pyproject.toml  reqs.txt  requirements.txt  variables.json  windows installation.bat  wq
.github/workflows/: main.yml
cogs/: admincommands.py  factorio.py  faq.py  fun.py  logger.py  lua-api.py  randomcatdog.py  testcog.py  timezone.py  userutils.py
cogs/factorio/: modportal.py  wiki.py
cogs/utils/: help.py  ownercog.py
data/: defaults.json  dogdb.json  heresydb.json  imagedb.json  tagdatabase.json  timezonedb.json
utils/: assets.py  customchecks.py  initdb.py  punishmentshelper.py  sql.py  wait-for-it.sh
