[tool.poetry]
name = "ubot"
version = "0.2.4"
description = "A bot made for the Factorio Discord server."
authors = ["arielbeje <arielbeje@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "main.py"},
    {include = "cogs"}
]

[tool.poetry.dependencies]
python = "^3.7"
ago = "^0.0.93"
aiohttp = ">=3.3.0,<3.5.0"
aiosqlite = "^0.9.0"
beautifulsoup4 = "^4.7"
"discord.py" = "^1.0"
feedparser = "^5.2"
fuzzywuzzy = "^0.17.0"
humanfriendly = "^4.18"
python-Levenshtein = "^0.12.0"
pytimeparse = "^1.1"
pytz = "^2018.9"
tomd = "^0.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
rope = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
