[tool.poetry]
name = "ubot"
version = "0.4.0"
description = "A bot made for the Factorio Discord server."
authors = ["arielbeje <arielbeje@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.3"
pytz = "^2023.3"
beautifulsoup4 = "^4.12.2"
feedparser = "^6.0.10"
tomd = "^0.1.3"
pytimeparse = "^1.1.8"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.21.0"
ago = "^0.0.95"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
